k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mock-app
  labels:
    name: mock-app
    environment: production
