k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-app
  namespace: mock-app
  labels:
    app: mock-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mock-app
  sessionAffinity: None
